# brad_os

./: Cargo.toml  README.md
.cargo/: config
src/: main  main.rs  vga_buffer.rs
