[package]
name = "brad_os"
version = "0.1.0"
authors = ["Bradley Windybank <trykryda@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["xbuild"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file=target/x86_64-brad_os/debug/bootimage-brad_os.bin"]